# file_mmap

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: test.rs
