[package]
name = "file_mmap"
version = "0.13.0"
edition = "2021"

authors = ["Oden Shirataki <oden.srtk@gmail.com>"]

description = "memmap file interface library"

repository = "https://github.com/OdenShirataki/file_mmap"

keywords = ["mmap","memmap","file","database"]
categories = ["filesystem"]
license = "MIT/Apache-2.0"

[dependencies]
memmap2="0.5"