[package]
name = "file_mmap"
version = "0.19.4"
edition = "2021"

authors = ["Oden Shirataki <oden.srtk@gmail.com>"]

description = "memmap file interface library"

repository = "https://github.com/OdenShirataki/file_mmap"

keywords = ["mmap", "memmap", "file", "database"]
categories = ["filesystem"]
license = "MIT/Apache-2.0"

[dependencies]
memmap2 = "0.9.0"
sysconf = "0.3.4"
once_cell = "1.18.0"
